--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
         </div>
 
     </section>
-    <section class="sec2"></section>
+    <section class="sec2">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sunt, minus ipsum repellat soluta facilis ea
+            doloribus. Ullam fugit nostrum ad. Optio quis veritatis assumenda sapiente officiis nihil sint voluptas
+            libero consequatur, accusantium, quibusdam excepturi iste, quasi mollitia neque? Magni nobis architecto quas
+            impedit hic, voluptates numquam amet temporibus iste eligendi iure earum eum dolorem voluptatibus animi
+            commodi ex sit optio repellat. Sapiente reprehenderit voluptas minus rerum cum odit, corporis, sunt soluta
+            suscipit nesciunt eum tenetur nemo mollitia libero fugit deleniti tempore esse repellendus molestiae
+            quisquam eligendi consectetur harum excepturi officiis. Nisi minus, doloribus amet voluptatem ex consectetur
+            iure fugiat.</p>
+    </section>
 </body>
 <script>
     function toggleMenu() {
